tests/invalid/bad_shift_imm.s
  lsl r0, r0, 100
  